<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp" 
        android:orientation="vertical">

        <!-- HEADER -->
        <include
            android:id="@+id/createserver_header"
            layout="@layout/header" />

        <!-- CREATE SERVER PART -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createserver_name_tv"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold" />
        <EditText 
            android:id="@+id/createserver_servername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/createserver_name_et" />
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/createserver_playtime" 
            android:textAppearance="@android:style/TextAppearance.Medium"            
            android:textStyle="bold" />
        <Spinner
            android:id="@+id/createserver_playtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/createserver_playtime_arr"
            android:prompt="@string/createserver_playtime" />
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/createserver_players"
            android:textAppearance="@android:style/TextAppearance.Medium"            
            android:textStyle="bold" />
        <Spinner
            android:id="@+id/createserver_players" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/createserver_players_arr"
            android:prompt="@string/createserver_players_prompt" />
        
        <Button
        android:id="@+id/createserver_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/createserver_create"
        />
    </LinearLayout>

</ScrollView>