<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:orientation="vertical" >

    <!-- SERVERS PART -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView 
	    android:layout_height="wrap_content"
	    android:layout_width="0dp"
	    android:layout_weight="3"
	    android:text="@string/servers_introlabel"
	    android:textAppearance="@android:style/TextAppearance.Medium" />
        
        <Button 
            android:id="@+id/servers_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/servers_create"
            android:textAppearance="@android:style/TextAppearance.Medium" />
        
    </LinearLayout>
	
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    
    <Button 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/servers_refresh"
	    android:id="@+id/servers_refresh"/>

</LinearLayout>